unpackaged/main/default/objects/ints__Yodlee_User_Credentials__c/ints__Yodlee_User_Credentials__c.object-meta.xml
<CustomObject>
    <label>Yodlee User Credentials</label>
    <nameField>
        <displayFormat>YUC-{00000000}</displayFormat>
        <label>Yodlee User Credentials Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yodlee User Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>