unpackaged/main/default/objects/ints__Yodlee_User_Credentials__c/fields/ints__Account__c.field-meta.xml
<CustomField>
    <fullName>ints__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Yodlee User Credentials</relationshipLabel>
    <relationshipName>Yodlee_User_Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>