unpackaged/main/default/objects/ints__Yodlee_User_Credentials__c/fields/ints__Yodlee_Password__c.field-meta.xml
<CustomField>
    <fullName>ints__Yodlee_Password__c</fullName>
    <label>Yodlee Password</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>