unpackaged/main/default/objects/ints__Yodlee_User_Credentials__c/fields/yodlee_Account_count__c.field-meta.xml
<CustomField>
    <fullName>yodlee_Account_count__c</fullName>
    <label>yodlee_Account_count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>