unpackaged/main/default/objects/ints__Yodlee_User_Credentials__c/validationRules/Account_count_should_be_greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_count_should_be_greater_than_0</fullName>
    <active>true</active>
    <errorConditionFormula>OR(yodlee_Account_count__c&lt;=0 ,ISBLANK(yodlee_Account_count__c))</errorConditionFormula>
    <errorMessage>Yodlee credentials with more than 1 account linked are acceptable</errorMessage>
</ValidationRule>