unpackaged/main/default/objects/ints__Yodlee_User_Credentials__c/validationRules/AccountID_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountID_Required</fullName>
    <active>true</active>
    <description>Account ID must be required field any time new credentials record is added, otherwise trigger looking to pull Yodlee transactions will fail</description>
    <errorConditionFormula>ISBLANK(ints__Account__c)</errorConditionFormula>
    <errorMessage>Account field is missing from Yodlee User Credentials record</errorMessage>
</ValidationRule>