unpackaged/main/default/objects/ints__Yodlee_User_Credentials__c/listViews/ints__All.listView-meta.xml
<ListView>
    <fullName>ints__All</fullName>
    <columns>NAME</columns>
    <columns>ints__Account__c</columns>
    <columns>yodlee_Account_count__c</columns>
    <columns>ints__Yodlee_Username__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>